--- a/src/main/resources/static/css/billingsuperadmin.css
+++ b/src/main/resources/static/css/billingsuperadmin.css
@@ -54,16 +54,22 @@ form .user-details .input-box{
 .user-details .input-box input:valid{
     border-color : #9b59b6;
 }
-form  .input-button input{
+form .button{
+    height: 45px;
+    margin: 35px 0;
+}
+.input-button input{
+    height: 100%;
+    width: 30%;
+    margin-left: 35%;
     outline: none;
     color:#fff;
     border:none;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 500;
-    padding: 10px;
     border-radius: 5px;
+    letter-spacing: 1px;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
-    margin-left: 280px;
 }
 nav{
     padding-left: 700px;
@@ -138,6 +144,11 @@ a:hover:after {
     form .user-details .input-box {
         margin: 10px 0 5px 0;
         width: 100%;
+    }
+    .input-button input{
+        height: 100%;
+        width: 80%;
+        margin-left: 30px;
     }
 }
 @media only screen and (height: 650px) {
