--- a/src/main/resources/templates/dashbord.html
+++ b/src/main/resources/templates/dashbord.html
@@ -3,7 +3,6 @@
 <head>
     <!-- Required meta tags -->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-    <meta name="viewport" content="width=device.width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link
             crossorigin="anonymous"
@@ -23,7 +22,7 @@
     <div class="sidebar-menu">
         <ul>
             <li>
-                <a href="index" class="active" ><span class="tab-bord"></span><span> Tableau de bord</span></a>
+                <a href="dashbord" class="active" ><span class="tab-bord"></span><span> Tableau de bord</span></a>
             </li>
             <li>
                 <a href="managemembers" class="act"><span class="G-member"></span><span> Gestion des membres</span></a>
@@ -38,66 +37,84 @@
                 <a href="managepayments"class="act"><span class="pai"></span><span> Paiement</span></a>
             </li>
             <li>
-                <a href="contact"class="act"><span class="comm"></span><span> Communication </span></a>
+                <a href=""class="act"><span class="comm"></span><span> Communication </span></a>
             </li>
         </ul>
     </div>
 </div>
 <div class="main-content">
     <header>
-        <h1> Tableau de bord</h1>
+        <h1>Tableau de bord</h1>
         <div class="navbar" th:insert="fragments/navbar.html :: navbar"></div>
     </header>
-    <div style="position:relative;left : 50px">
+    <div id = "case_sup">
         <div class="card card-1">
-            <div  style="position:absolute;left: 110px; top:10px">
+            <div id = "modele_case_1">
                 <img class = "image_member" src="images/user.png"  />
-                <div style="position:relative;right: 15px; top:0px">
+                <div id = "case_1_text">
+
                     <p id = "member_count_number">3</p>
                     <p id = "member_count"> Membres</p>
                 </div>
+
             </div>
+
         </div>
         <div class="card card-1">
-            <div  style="position:absolute;left: 110px; top:10px">
+            <div id = "modele_case_1">
                 <img class = "image_member" src="images/donnant.png"  />
-                <div style="position:relative;right: 20px; top:0px">
+                <div id = "case_2_text">
+
                     <p id = "member_count_number">3 €</p>
                     <p id="member_count">de collectes</p>
+
                 </div>
             </div>
+
         </div>
         <div class="card card-1">
-            <div  style="position:absolute;left: 90px; top:10px">
+            <div id = "case_3">
                 <img class = "image_member" src="images/paiement.png"  />
-                <div style="position:relative;right: 20px; top:0px">
+                <div id = "case_3_text">
+
                     <p id = "member_count_number">3 €</p>
                     <p id="member_count">de paiements</p>
+
                 </div>
             </div>
+
         </div>
         <div class="card card-1">
-            <div style="position:absolute;left: 100px; top:10px">
+            <div id = "case_4">
                 <img class = "image_member" src="images/verifie.png"  />
-                <div style="position:relative;right: 25px; top:0px">
+                <div id = "case_4_text">
+
                     <p id = "member_count">Abonnement</p>
                     <p id="member_count_number">valide</p>
+
                 </div>
             </div>
+
         </div>
 
         <div class="card_2 card-1">
-            <div style="position:absolute;left: 250px; top:10px">
+            <div id = "case_5">
                 <img class = "image_member" src="images/new_member.png"  />
-                <div style="position:relative;right: 10px; top:0px">
+                <div id =case_5_text>
 
                     <p id = "member_count_number">3</p>
                     <p id = "member_count">durant ce mois</p>
+
                 </div>
             </div>
+
         </div>
+
+
 
     </div>
 </div>
+
+
 </div>
 </body>
