--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -18,7 +18,7 @@
 <header>
     <img class="logo" src="images/logo.png"/>
 </header>
-<div th:insert="fragments/navbar.html :: navbar"></div>
+<div th:insert="fragments/topbar.html :: topbar"></div>
 <main>
     <div>
         <div class="head"
