--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 <body>
 <header>
     <img class="logo" src="images/logo.png">
-    <div class="nav" th:insert="fragments/navbar.html :: navbar"></div>
+    <div class="nav" th:insert="fragments/topbar.html :: topbar"></div>
 </header>
 <main>
     <div class="cont">
@@ -96,7 +96,8 @@
             </div>
             <div>
                 <h6 class="description-bottom"> Suivez nous</h6>
-                <a href="https://www.facebook.com/etudiants.aparisdescartes/"><img class="image-social" src="images/facebook.png"></a>
+                <a href="https://www.facebook.com/etudiants.aparisdescartes/"><img class="image-social"
+                                                                                   src="images/facebook.png"></a>
                 <a href="https://math-info.u-paris.fr/"><img class="image-social" src="images/instagram.png"></a>
                 <a href="https://math-info.u-paris.fr/"><img class="image-social" src="images/twitter.png"> </a>
             </div>
