--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -14,53 +14,25 @@
     <title>Contact</title>
 </head>
 <body>
-<div th:insert="fragments/navbar.html :: navbar"></div>
-<div class="sidebar">
-    <div class="siderbar-logo">
-        <img class="logo" src="images/logo.png"/>
-    </div>
-    <div class="sidebar-menu">
-        <ul>
-            <li>
-                <a href="dashbord" class="act" ><span class="tab-bord"></span><span> Tableau de bord</span></a>
-            </li>
-            <li>
-                <a href="managemembers" class="active"><span class="G-member"></span><span> Gestion des membres</span></a>
-            </li>
-            <li>
-                <a href="" class="act"><span class="bill"></span><span> Billetterie</span></a>
-            </li>
-            <li>
-                <a href=""class="act"><span class="coll"></span><span> Collectes</span></a>
-            </li>
-            <li>
-                <a href="managepayments"class="act"><span class="pai"></span><span> Paiement</span></a>
-            </li>
-            <li>
-                <a href="contact"class="act"><span class="comm"></span><span> Communication </span></a>
-            </li>
-        </ul>
-    </div>
-</div>
 <div class="main-content">
     <header>
-        <h1>Communication</h1>
-        <p th:text="${success}"></p>
-        <p th:text="${error}"></p>
+        <h1>Contact</h1>
+        <div class="topbar" th:insert="fragments/topbar.html :: topbar"></div>
+        <div class="sidebar" th:insert="fragments/sidebar.html :: sidebar"></div>
     </header>
     <main>
         <div class="formulaire">
             <form action="/contactconfirm" id="contactConfirm" method="post">
-
                 <div class="user-details">
                     <div class="input-box">
-                        <label class="details"  for="object">Objet</label>
+                        <label class="details" for="object">Objet</label>
                         <input id="object" name="object" placeholder="Entrez l'objet du mail" required type="text">
                     </div>
-                    <div class="input-box" >
-                        <textarea  id="body" name="body" rows="5" cols="33" required placeholder="Votre message"></textarea>
+                    <div class="input-box">
+                        <textarea id="body" name="body" rows="5" cols="33" required
+                                  placeholder="Votre message"></textarea>
                     </div>
-                    <div  th:object="${member}">
+                    <div th:object="${member}">
                         <select id="emailMember" name="emailMember">
                             <option value="">Choisir un membre</option>
                             <option value="all">Tous les membres</option>
@@ -70,12 +42,10 @@
                         </select>
                     </div>
                     <div class="input-button1">
-                    <input id="contactButton" name='contactButton' type="submit" value="Envoyer">
+                        <input id="contactButton" name='contactButton' type="submit" value="Envoyer">
                     </div>
                 </div>
-
-
-    </form>
+            </form>
         </div>
     </main>
 </div>
