--- a/src/main/resources/templates/managemembers.html
+++ b/src/main/resources/templates/managemembers.html
@@ -16,38 +16,11 @@
 
 </head>
 <body>
-
-<div class="sidebar">
-    <div class="siderbar-logo">
-        <img class="logo" src="images/logo.png"/>
-    </div>
-    <div class="sidebar-menu">
-        <ul>
-            <li>
-                <a href="dashbord" class="act" ><span class="tab-bord"></span><span> Tableau de bord</span></a>
-            </li>
-            <li>
-                <a href="managemembers" class="active"><span class="G-member"></span><span> Gestion des membres</span></a>
-            </li>
-            <li>
-                <a href="" class="act"><span class="bill"></span><span> Billetterie</span></a>
-            </li>
-            <li>
-                <a href=""class="act"><span class="coll"></span><span> Collectes</span></a>
-            </li>
-            <li>
-                <a href="managepayments"class="act"><span class="pai"></span><span> Paiement</span></a>
-            </li>
-            <li>
-                <a href="contact"class="act"><span class="comm"></span><span> Communication </span></a>
-            </li>
-        </ul>
-    </div>
-</div>
 <div class="main-content">
     <header>
         <h1>Gestion des membres</h1>
-        <div class="navbar" th:insert="fragments/navbar.html :: navbar"></div>
+        <div class="topbar" th:insert="fragments/topbar.html :: topbar"></div>
+        <div class="sidebar" th:insert="fragments/sidebar.html :: sidebar"></div>
     </header>
     <main>
         <div class="formulaire">
@@ -62,18 +35,18 @@
                                placeholder="Entrez le prénom" required type="text">
                     </div>
                     <div class="input-box">
-                        <label class="details"  for="lastName">Nom</label>
+                        <label class="details" for="lastName">Nom</label>
                         <input id="lastName" name="lastName" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
                                placeholder="Entrez le nom" required type="text">
                     </div>
                     <div class="gender-details">
-                        <label class="details" >Sexe</label>
-                        <input id="homme" name="sex" value="homme" type="radio">    Homme
-                        <input id="femme" name="sex" value="femme" type="radio">    Femme
-                        <input id="autre" name="sex" value="autre" type="radio">    Autre
+                        <label class="details">Sexe</label>
+                        <input id="homme" name="sex" value="homme" type="radio"> Homme
+                        <input id="femme" name="sex" value="femme" type="radio"> Femme
+                        <input id="autre" name="sex" value="autre" type="radio"> Autre
                     </div>
                     <div class="input-box">
-                        <label class="details"  for="birthDate">Date de naissance</label>
+                        <label class="details" for="birthDate">Date de naissance</label>
                         <input id="birthDate" name="birthDate" required type="date">
                     </div>
                     <div class="input-box">
@@ -82,29 +55,29 @@
                                placeholder="Entrez l'adresse" required type="text">
                     </div>
                     <div class="input-box">
-                        <label  class="details"  for="city">Ville</label>
+                        <label class="details" for="city">Ville</label>
                         <input id="city" name="city" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
                                placeholder="Entrez la ville" required type="text">
                     </div>
                     <div class="input-box">
-                        <label class="details"  for="postalCode">Code Postal</label>
+                        <label class="details" for="postalCode">Code Postal</label>
                         <input id="postalCode" name="postalCode" pattern="[0-9]{5}"
                                placeholder="Entrez le code postal" required type="text">
                     </div>
                     <div class="input-box">
-                        <label class="details"  for="email">Email</label>
+                        <label class="details" for="email">Email</label>
                         <input id="email" name="email" placeholder="Entrez l'email" required type="email">
                     </div>
                     <div class="input-box">
-                        <label class="details"  for="phoneNumber">Numéro de téléphone</label>
+                        <label class="details" for="phoneNumber">Numéro de téléphone</label>
                         <input id="phoneNumber" name="phoneNumber" pattern="^(\+33|0033|0)([0-7])[0-9]{8}$"
                                placeholder="Entrez le numéro de téléphone" required type="tel">
                     </div>
 
                     <div class="level-details">
                         <label class="details">Niveau</label>
-                        <input id="admin" name="admin" type="radio" value="true">  Administrateur
-                        <input id="member" name="admin" type="radio" value="false">  Membre
+                        <input id="admin" name="admin" type="radio" value="true"> Administrateur
+                        <input id="member" name="admin" type="radio" value="false"> Membre
                     </div>
 
                     <div class="input-button1">
@@ -113,10 +86,9 @@
                 </div>
                 <label>------------------------------------------------------------------------------------------------------------------------------------------</label>
             </form>
-
             <div class="input-button2">
-
-                <form action="/addmemberfromfileconfirm" id="addMemberFromFileConfirm" method="post" enctype="multipart/form-data">
+                <form action="/addmemberfromfileconfirm" id="addMemberFromFileConfirm" method="post"
+                      enctype="multipart/form-data">
                     <input type="file" id="file" name="file"
                            accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
                     <input id="addMemberFromFileButton" name='addMemberFromFileButton' type='submit' value="Ajouter"/>
@@ -154,10 +126,7 @@
                 </tr>
             </table>
         </div>
-
     </main>
-
 </div>
-
 </body>
 </html>
