--- a/src/main/resources/templates/managepayments.html
+++ b/src/main/resources/templates/managepayments.html
@@ -13,40 +13,13 @@
     />
     <link rel="stylesheet" href="css/managepayments.css"/>
     <title>Paiements</title>
-
 </head>
 <body>
-<div th:insert="fragments/navbar.html :: navbar"></div>
-<div class="sidebar">
-    <div class="siderbar-logo">
-        <img class="logo" src="images/logo.png"/>
-    </div>
-    <div class="sidebar-menu">
-        <ul>
-            <li>
-                <a href="dashbord" class="act" ><span class="tab-bord"></span><span> Tableau de bord</span></a>
-            </li>
-            <li>
-                <a href="managemembers" class="act"><span class="G-member"></span><span> Gestion des membres</span></a>
-            </li>
-            <li>
-                <a href="" class="act"><span class="bill"></span><span> Billetterie</span></a>
-            </li>
-            <li>
-                <a href=""class="act"><span class="coll"></span><span> Collectes</span></a>
-            </li>
-            <li>
-                <a href="managepayments"class="active"><span class="pai"></span><span> Paiement</span></a>
-            </li>
-            <li>
-                <a href="contact"class="act"><span class="comm"></span><span> Communication </span></a>
-            </li>
-        </ul>
-    </div>
-</div>
 <div class="main-content">
     <header>
-        <h1> Paiement</h1>
+        <h1>Paiements</h1>
+        <div class="topbar" th:insert="fragments/topbar.html :: topbar"></div>
+        <div class="sidebar" th:insert="fragments/sidebar.html :: sidebar"></div>
     </header>
     <main>
         <p th:text="${success}"></p>
@@ -63,13 +36,7 @@
                 </tr>
             </table>
         </div>
-
-
     </main>
-
-
 </div>
-
-
 </body>
 </html>
