Fix signupmember.html arguments name

--- a/src/main/resources/templates/signupmember.html
+++ b/src/main/resources/templates/signupmember.html
@@ -48,8 +48,8 @@
                     <input id="birthDate" name="birthDate" required type="date">
                 </div>
                 <div class="input-box">
-                    <label class="details" for="association">Association</label>
-                    <input id="association" name="association" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
+                    <label class="details" for="associationName">Association</label>
+                    <input id="associationName" name="associationName" pattern="^[a-zA-Z]+(?:[\s-][a-zA-Z]+)*$"
                            placeholder="Entrez le nom de l'association" required type="text">
                 </div>
                 <div class="input-box">
