--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -17,9 +17,8 @@
 <body>
 <div class="main-content">
     <header>
-        <h1>Profile</h1>
+        <img class="logo" src="images/logo.png">
         <div class="topbar" th:insert="fragments/topbar.html :: topbar"></div>
-        <div class="sidebar" th:insert="fragments/sidebar.html :: sidebar"></div>
     </header>
     <main>
         <div class="container">
