--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -61,6 +61,10 @@ body{
     font-size: 1.5rem;
     padding-right: 1rem;
 }
+header{
+    display: flex;
+    justify-content: space-between;
+}
 header h1{
     color: white;
     margin-left: 30px;
@@ -144,10 +148,6 @@ form .input-button1{
     letter-spacing: 1px;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
-nav{
-    float: right;
-}
-
 nav ul li{
     display: inline-flex;
     list-style: none;
