--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -123,14 +123,18 @@ nav ul li a {
     font-size: 1.3vw;
     padding: 0px 20px;
 }
+case_sup{
+    width: 100%;
+}
 .card {
     background: #fff;
     border-radius: 2px;
     display: inline-block;
     height: 250px;
-    margin: 1rem;
+    margin: 0.3rem;
     position: relative;
     width: 300px;
+
 }
 .card_2 {
     background: #fff;
