--- a/src/main/resources/static/css/managepayments.css
+++ b/src/main/resources/static/css/managepayments.css
@@ -16,9 +16,11 @@ body{
     top: 0;
     height: 100%;
     background: white;
+
 }
 .main-content{
     margin-left: 245px;
+    height: 609px;
 }
 .siderbar-logo{
     padding-left: 2rem;
@@ -57,6 +59,10 @@ body{
 .sidebar-menu a span:first-child{
     font-size: 1.5rem;
     padding-right: 1rem;
+}
+header{
+    display: flex;
+    justify-content: space-between;
 }
 h1{
     font-size: 2.6vw;
@@ -122,10 +128,6 @@ tr:nth-child(even):hover{
     transform: scale(1.2);
     transition: transform 50ms ease-in;
 }
-nav{
-    float: right;
-}
-
 nav ul li{
     display: inline-flex;
     list-style: none;
